@@ -1,3 +1,10 @@
+2006-02-05  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/Makefile.am:
+	* embed/mozilla/mozilla-embed-single.cpp:
+
+	Only use the major version in the user agent string.
+
 2006-02-05  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* data/default-prefs-common.js: 
